# qt-collapsible-section

./: .gitignore  CMakeLists.txt  README.md  Section.cpp  Section.h
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
